--- a/nvim/plugins/dein.toml
+++ b/nvim/plugins/dein.toml
@@ -14,6 +14,15 @@ nmap <silent> [denite]<C-O> :<C-u>Denite outline -highlight-mode-insert=Search<C
 nmap <silent> [denite]<C-V> :<C-u>call denite#start([{'name': 'file_rec', 'args': ['~/.dotfiles']}]) -highlight-mode-insert=Search=Search<CR>
 '''
 
+# powerline does not support neovim.
+# https://github.com/powerline/powerline/issues/1287
+#
+# [[plugins]]
+# repo='powerline/powerline'
+# hook_add = '''
+# set rtp+=powerline/bindings/vim
+# '''
+
 [[plugins]]
 repo = 'vim-airline/vim-airline'
 depends = ['vim-airline-themes']
