tmux conf upgrade

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,30 +1,69 @@
-# using C-a as prefix
-unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
+# Tmux Settings
 
-# `%` -> `s`
-unbind %
-bind s split-window -v
-# `"` -> `v`
-unbind '"'
-bind v split-window -h
+# set-option = set
+# set-window-option = setw
+# bind-key = bind
+# unbind-key = unbind
 
-# color
+
+# Core Settings
+set-option -g escape-time 0
+set-option -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 set-option -g default-terminal screen-256color
 set-option -g terminal-overrides 'xterm:colors=256'
-## クリップボード共有を有効にする
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-# マウス操作を有効化
-set-option -g mouse on
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-# スクロールアップするとコピーモードに入る
+set-window-option -g mode-keys vi
+set-option -g mouse on
 bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-# 最後までスクロールダウンするとコピーモードを抜ける
 bind-key -n WheelDownPane select-pane -t= \; send-keys -M
 
+
+# Key Bindings
+
+# `tmux list-keys`
+
+## Prefix
+unbind-key C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+## List Sessions: default `s`
+unbind-key l
+bind-key l choose-tree -Zs
+
+## Create Window: default `c`
+## Select Window: default `w`
+## Quit Window: default `&`
+
+## reload
+bind-key r source-file ~/.tmux.conf
+
+## move pane
+bind-key -n S-left select-pane -L
+bind-key -n S-down select-pane -D
+bind-key -n S-up select-pane -U
+bind-key -n S-right select-pane -R
+
+## split window vertical: default `%`
+unbind-key %
+bind-key - split-window -v
+
+## split window horizontal: default `"`
+unbind-key '"'
+bind-key | split-window -h
+
+## start slection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+## copy
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+## pasete
+bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+
+# Theme Settings
 run-shell "powerline-daemon -q"
 source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
-
-set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
