update for python3

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,4 +66,4 @@ bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux 
 
 # Theme
 run-shell "powerline-daemon -q"
-source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "/Users/Tomoshige/.anyenv/envs/pyenv/versions/3.6.6/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
