Change powerline to unused

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,5 +65,5 @@ bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux 
 
 
 # Theme
-run-shell "powerline-daemon -q"
-source "/Users/Tomoshige/.anyenv/envs/pyenv/versions/3.6.6/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+#run-shell "powerline-daemon -q"
+#source "/Users/Tomoshige/.anyenv/envs/pyenv/versions/3.6.6/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
