Change to use fish

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@ set-option -g escape-time 0
 set-option -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 set-option -g default-terminal screen-256color
 set-option -g terminal-overrides 'xterm:colors=256'
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l fish"
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-window-option -g mode-keys vi
 set-option -g mouse on
