:bug: Fix tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,7 +30,7 @@ bind-key C-a send-prefix
 
 ## List Sessions: default `s`
 unbind-key l
-bind-key l choose-tree -Zs
+bind-key l choose-tree -Nsw
 
 ## Create Window: default `c`
 ## Select Window: default `w`
