:recycle: Update config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,9 +57,9 @@ bind-key | split-window -h
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 ## copy
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 unbind-key -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 ## pasete
 bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
