:recycle: Update tmux dotfiles

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,66 +1,117 @@
-# Tmux Settings
+# Tmux Configuration
 
-# set-option = set
-# set-window-option = setw
-# bind-key = bind
-# unbind-key = unbind
-
-
-# Core Settings
-set-option -g escape-time 0
-set-option -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
-set-option -g default-terminal screen-256color
-set-option -g terminal-overrides 'xterm:colors=256'
-set-option -g default-command "reattach-to-user-namespace -l fish"
-set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# <Core>
+set-window-option -g aggressive-resize on
+set-window-option -g allow-rename on
+set-window-option -g alternate-screen on
 set-window-option -g mode-keys vi
+set-option -g default-command "~/.config/tmux/bin/reattach-to-user-namespace -l $SHELL"
+set-option -g default-terminal tmux-256color
+set-option -g escape-time 50
+set-option -g exit-empty on
+set-option -g exit-unattached off
+set-option -g focus-events on
 set-option -g mouse on
-bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind-key -n WheelDownPane select-pane -t= \; send-keys -M
+set-option -g renumber-windows on
+set-option -g set-clipboard external
+set-option -g status-keys vi
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+unbind-key -T copy-mode-vi Enter
+bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
+bind-key -T copy-mode-vi S-Up send-keys -X cursor-up
+bind-key -T copy-mode-vi S-Down send-keys -X cursor-down
+bind-key -T copy-mode-vi S-Left send-keys -X cursor-left
+bind-key -T copy-mode-vi S-Right send-keys -X cursor-right
+bind-key -T root DoubleClick1Pane select-pane \; copy-mode \; send-keys -X select-word
+bind-key -T root TripleClick1Pane select-pane \; copy-mode \; send-keys -X select-line
+bind-key -T root WheelDownPane select-pane -t= \; send-keys -M
+bind-key -T root S-Up copy-mode \; send-keys -X cursor-up
+bind-key -T root S-Down copy-mode \; send-keys -X cursor-down
+bind-key -T root S-Left copy-mode \; send-keys -X cursor-left
+bind-key -T root S-Right copy-mode \; send-keys -X cursor-right
+bind-key -T root M-Up select-pane -U
+bind-key -T root M-Down select-pane -D
+bind-key -T root M-Left select-pane -L
+bind-key -T root M-Right select-pane -R
 
 
-# Key Bindings
+# <>
+# monitor bell [on | off]
+set-window-option -g monitor-bell on
+# スクロール履歴
+set-option -g history-limit 30000
+# second
+set-option -g status-interval 15
 
-# `tmux list-keys`
+# <Preference>
+## 時計の時間フォーマット [12 | 24]
+set-window-option -g clock-mode-style 24
+## ペインのボーターステータス [off | top | bottom]
+set-window-option -g pane-border-status bottom
+set-window-option -g pane-border-format " #P"
+## アクティブペインのボータースタイル
+set-window-option -g pane-active-border-style fg=green
+## モードスタイル
+set-window-option -g mode-style fg=white,bg=black
+## ステータス [off | on | 2 | 3 | 4 | 5]
+set-option -g status on
 
-## Prefix
+# <Key Bindings>
+## プレフィックス (default: C-b)
 unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-## List Sessions: default `s`
-unbind-key l
-bind-key l choose-tree -Nsw
+## セッション一覧を表示 (default: s)
+unbind-key s
+bind-key l choose-tree -Z
 
-## Create Window: default `c`
-## Select Window: default `w`
-## Quit Window: default `&`
+## 新規ウインドウを作成 (default: c)
+unbind-key c
+bind-key n new-window
 
-## reload
-bind-key r source-file ~/.tmux.conf
+## ペインを閉じる
+bind-key -T prefix w confirm-before -p "kill-pane #P? (y/n)" kill-pane
+
+
+## 設定ファイルを読み込む
+bind-key -T prefix r source-file ~/.tmux.conf
 
 ## move pane
-bind-key -n S-left select-pane -L
-bind-key -n S-down select-pane -D
-bind-key -n S-up select-pane -U
-bind-key -n S-right select-pane -R
+bind-key -T root M-Up select-pane -U
+bind-key -T root M-Down select-pane -D
+bind-key -T root M-Left select-pane -L
+bind-key -T root M-Right select-pane -R
 
-## split window vertical: default `%`
+## ウインドウを垂直方向に分割する
 unbind-key %
 bind-key - split-window -v
 
-## split window horizontal: default `"`
+## ウインドウを水平方向に分割する
 unbind-key '"'
 bind-key | split-window -h
 
-## start slection
+## 選択を開始
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 
-## copy
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+## 選択範囲を解除
+bind-key -T copy-mode-vi e send-keys -X clear-selection
+
+## コピー
+bind-key -T copy-mode-vi y send-keys -X copy-pipe ~/.config/tmux/bin/tmux-copy
+
+## コピーモードを終了
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel ~/.config/tmux/bin/tmux-copy
+
+## 指定行へ移動
+unbind-key -T copy-mode-vi :
+bind-key -T prefix g copy-mode \; command-prompt -p "(goto line)" "send -X goto-line \"%%%\""
+
+## 検索
+bind-key -T prefix f copy-mode \; command-prompt -p "(search down)" "send -X search-forward \"%%%\""
 
 # Theme
-#run-shell "powerline-daemon -q"
-#source "/Users/Tomoshige/.anyenv/envs/pyenv/versions/3.6.6/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
+if-shell 'type "powerline-daemon" > /dev/null 2>&1' 'source ~/.local/pipx/venvs/powerline-status/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
