:bug: Fix term color in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,7 @@ set-window-option -g allow-rename on
 set-window-option -g alternate-screen on
 set-window-option -g mode-keys vi
 set-option -g default-command "~/.config/tmux/bin/reattach-to-user-namespace -l $SHELL"
-set-option -g default-terminal tmux-256color
+set-option -g default-terminal screen-256color
 set-option -g escape-time 50
 set-option -g exit-empty on
 set-option -g exit-unattached off
@@ -49,10 +49,10 @@ set-option -g status-interval 15
 ## 時計の時間フォーマット [12 | 24]
 set-window-option -g clock-mode-style 24
 ## ペインのボーターステータス [off | top | bottom]
-set-window-option -g pane-border-status bottom
+set-window-option -g pane-border-status top
 set-window-option -g pane-border-format " #P"
 ## アクティブペインのボータースタイル
-set-window-option -g pane-active-border-style fg=green
+set-window-option -g pane-active-border-style fg=cyan
 ## モードスタイル
 set-window-option -g mode-style fg=white,bg=black
 ## ステータス [off | on | 2 | 3 | 4 | 5]
