--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,10 +42,11 @@ bind-key -T root M-Right select-pane -R
 set-window-option -g monitor-bell on
 # スクロール履歴
 set-option -g history-limit 30000
-# second
+#
 set-option -g status-interval 15
 
-# <Preference>
+
+# <Appearance>
 ## 時計の時間フォーマット [12 | 24]
 set-window-option -g clock-mode-style 24
 ## ペインのボーターステータス [off | top | bottom]
@@ -57,61 +58,47 @@ set-window-option -g pane-active-border-style fg=cyan
 set-window-option -g mode-style fg=white,bg=black
 ## ステータス [off | on | 2 | 3 | 4 | 5]
 set-option -g status on
+## powerline/powerlineテーマを有効化
+if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
+if-shell 'type "powerline-daemon" > /dev/null 2>&1' 'source ~/.local/pipx/venvs/powerline-status/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
 
 # <Key Bindings>
 ## プレフィックス (default: C-b)
 unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-
 ## セッション一覧を表示 (default: s)
 unbind-key s
 bind-key l choose-tree -Z
-
 ## 新規ウインドウを作成 (default: c)
 unbind-key c
 bind-key n new-window
-
 ## ペインを閉じる
 bind-key -T prefix w confirm-before -p "kill-pane #P? (y/n)" kill-pane
-
-
 ## 設定ファイルを読み込む
 bind-key -T prefix r source-file ~/.tmux.conf
-
-## move pane
+## 指定した方向のペインに移動
 bind-key -T root M-Up select-pane -U
 bind-key -T root M-Down select-pane -D
 bind-key -T root M-Left select-pane -L
 bind-key -T root M-Right select-pane -R
-
 ## ウインドウを垂直方向に分割する
 unbind-key %
 bind-key - split-window -v
-
 ## ウインドウを水平方向に分割する
 unbind-key '"'
 bind-key | split-window -h
-
 ## 選択を開始
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-
 ## 選択範囲を解除
 bind-key -T copy-mode-vi e send-keys -X clear-selection
-
 ## コピー
 bind-key -T copy-mode-vi y send-keys -X copy-pipe ~/.config/tmux/bin/tmux-copy
-
 ## コピーモードを終了
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel ~/.config/tmux/bin/tmux-copy
-
 ## 指定行へ移動
 unbind-key -T copy-mode-vi :
 bind-key -T prefix g copy-mode \; command-prompt -p "(goto line)" "send -X goto-line \"%%%\""
-
 ## 検索
 bind-key -T prefix f copy-mode \; command-prompt -p "(search down)" "send -X search-forward \"%%%\""
-
-# Theme
-if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
-if-shell 'type "powerline-daemon" > /dev/null 2>&1' 'source ~/.local/pipx/venvs/powerline-status/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
