:bug: Fix tmux conf and adapt to some versions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,8 @@ set-window-option -g mode-keys vi
 set-option -g default-command "~/.config/tmux/bin/reattach-to-user-namespace -l $SHELL"
 set-option -g default-terminal screen-256color
 set-option -g escape-time 50
-set-option -g exit-empty on
+if-shell "tmux -V | grep -q '2.[7-9]'" \
+    "set-option -g exit-empty on"
 set-option -g exit-unattached off
 set-option -g focus-events on
 set-option -g mouse on
@@ -70,7 +71,9 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 ## セッション一覧を表示 (default: s)
 unbind-key s
-bind-key l choose-tree -Z
+if-shell "tmux -V | grep -q '2.[7-9]'" \
+    "bind-key l choose-tree -Z" \
+    "bind-key l choose-tree"
 ## 新規ウインドウを作成 (default: c)
 unbind-key c
 bind-key n new-window
