:sparkles: Add tmux default status style

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,6 +59,12 @@ set-window-option -g pane-active-border-style fg=cyan
 set-window-option -g mode-style fg=white,bg=black
 ## ステータス [off | on | 2 | 3 | 4 | 5]
 set-option -g status on
+set-option -g status-style fg=colour255,bg=colour237
+set-option -g status-left "#[fg=colour255,bg=colour241][#S]#[default] "
+set-option -g status-right-length 60
+set-option -g status-right "#[fg=colour255,bg=colour241]  \"#{=21:pane_title}\" | %Y-%m-%d | %H:%M | #h #[default]"
+set-window-option -g window-status-format " #I: #W#{?window_flags,#{window_flags}, } "
+set-window-option -g window-status-current-format "#[fg=colour255,bg=colour39,bold] #I: #W#{?window_flags,#{window_flags}, } #[default]"
 ## powerline/powerlineテーマを有効化
 if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
 if-shell 'type "powerline-daemon" > /dev/null 2>&1' 'source ~/.local/pipx/venvs/powerline-status/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
