:recycle: Update tmux.conf not to depend on powerline version

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,7 +67,7 @@ set-window-option -g window-status-format " #I: #W#{?window_flags,#{window_flags
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour39,bold] #I: #W#{?window_flags,#{window_flags}, } #[default]"
 ## powerline/powerlineテーマを有効化
 if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
-if-shell 'type "powerline-daemon" > /dev/null 2>&1' 'source ~/.local/pipx/venvs/powerline-status/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
+if-shell 'type "powerline-daemon" > /dev/null 2>&1 && env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 
 
 # <Key Bindings>
