--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Run install.sh minimum
         run: ./install.sh minimum
       - name: Run install.sh link
-        run: install.sh link
+        run: ./install.sh link
       - name: Run install.sh git
-        run: install.sh git
+        run: ./install.sh git
       - name: Run install.sh all
-        run: install.sh all
+        run: ./install.sh all
