--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,11 +18,10 @@ jobs:
       - name: Load .bash_profile
         run: |
           bash ~/.bash_profile 2> error.log; cat error.log
-          if [ -s error.log ]; then false; fi
+          test ! -s error.log
       - name: Load .bashrc
         run: |
-          bash ~/.bashrc 2> error.log; cat error.log
-          if [ -s error.log ]; then false; fi
+          bash ~/.bashrc
   linux_test_link:
     runs-on: ubuntu-latest
     steps:
