--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,6 +9,12 @@ on:
   workflow_dispatch:
 
 jobs:
+  linux_test_backup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run install.sh backup
+        run: ./install.sh backup
   linux_test_minimum:
     runs-on: ubuntu-latest
     steps:
