Update tmux conf

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -47,6 +47,20 @@ set-option -g history-limit 30000
 set-option -g status-interval 15
 
 
+# set -g @tmux_power_theme 'snow'
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon session
+set -g @dracula-border-contrast true
+set -g @dracula-gpu-usage-label "GPU"
+set -g @dracula-cpu-usage-label "CPU"
+set -g @dracula-show-fahrenheit false
+# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
+set -g @dracula-plugins "battery time"
+set -g @dracula-military-time true
+set -g @dracula-show-timezone false
+
 # <Appearance>
 ## 時計の時間フォーマット [12 | 24]
 set-window-option -g clock-mode-style 24
@@ -66,8 +80,8 @@ set-option -g status-right "#[fg=colour255,bg=colour241]  \"#{=21:pane_title}\" 
 set-window-option -g window-status-format " #I: #W#{?window_flags,#{window_flags}, } "
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour39,bold] #I: #W#{?window_flags,#{window_flags}, } #[default]"
 ## powerline/powerlineテーマを有効化
-if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
-if-shell 'type "powerline-daemon" > /dev/null 2>&1 && env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
+# if-shell 'type powerline-daemon' 'run-shell "powerline-daemon -q || true"'
+# if-shell 'type "powerline-daemon" > /dev/null 2>&1 && env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 
 
 # <Key Bindings>
@@ -86,7 +100,7 @@ bind-key n new-window
 ## ペインを閉じる
 bind-key -T prefix w confirm-before -p "kill-pane #P? (y/n)" kill-pane
 ## 設定ファイルを読み込む
-bind-key -T prefix r source-file ~/.tmux.conf
+bind-key -T prefix r source-file ~/.config/tmux/tmux.conf
 ## 指定した方向のペインに移動
 bind-key -T root M-Up select-pane -U
 bind-key -T root M-Down select-pane -D
@@ -111,3 +125,16 @@ unbind-key -T copy-mode-vi :
 bind-key -T prefix g copy-mode \; command-prompt -p "(goto line)" "send -X goto-line \"%%%\""
 ## 検索
 bind-key -T prefix f copy-mode \; command-prompt -p "(search down)" "send -X search-forward \"%%%\""
+
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# システムのクリップボードにコピー
+set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'dracula/tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
