--- a/config/git/config
+++ b/config/git/config
@@ -8,6 +8,8 @@
   # Make `git rebase` safer on macOS
   # More info: <http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/>
   trustctime = false
+[init]
+    defaultBranch = main
 [commit]
   template = $XDG_CONFIG_HOME/.config/git/message
 [merge]
@@ -18,6 +20,7 @@
   graph = log --graph --date-order --all --pretty=format:'%h %Cred%d %Cgreen%ad %Cblue%cn %Creset%s' --date=short
   undo = reset --soft HEAD~1
   amend = commit -a --amend
+  delete = !"f(){ git filter-branch --tree-filter \"rm -f -r ${@}\" HEAD; git gc --aggressive --prune=now; };f"
 [pager]
   diff = delta
   log = delta
