--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -111,7 +111,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: 'HackGenNerd Console'
+    family: HackGenNerd
+    # family: monospace
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
