Arrange tmux.conf
* split for each type setting
* write options changed from default
* add comments
* add pane-hostname

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,136 +1,8 @@
 # Tmux Configuration
 
-# <Core>
-set-window-option -g aggressive-resize on
-set-window-option -g allow-rename on
-set-window-option -g alternate-screen on
-set-window-option -g mode-keys vi
-set-option -g default-command "~/.config/tmux/bin/reattach-to-user-namespace -l $SHELL"
-set-option -g default-terminal screen-256color
-set-option -g escape-time 50
-if-shell "tmux -V | grep -q '2.[7-9]'" \
-    "set-option -g exit-empty on"
-set-option -g exit-unattached off
-set-option -g focus-events on
-set-option -g mouse on
-set-option -g renumber-windows on
-set-option -g set-clipboard external
-set-option -g status-keys vi
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-unbind-key -T copy-mode-vi MouseDragEnd1Pane
-unbind-key -T copy-mode-vi Enter
-bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
-bind-key -T copy-mode-vi S-Up send-keys -X cursor-up
-bind-key -T copy-mode-vi S-Down send-keys -X cursor-down
-bind-key -T copy-mode-vi S-Left send-keys -X cursor-left
-bind-key -T copy-mode-vi S-Right send-keys -X cursor-right
-bind-key -T root DoubleClick1Pane select-pane \; copy-mode \; send-keys -X select-word
-bind-key -T root TripleClick1Pane select-pane \; copy-mode \; send-keys -X select-line
-bind-key -T root WheelDownPane select-pane -t= \; send-keys -M
-bind-key -T root S-Up copy-mode \; send-keys -X cursor-up
-bind-key -T root S-Down copy-mode \; send-keys -X cursor-down
-bind-key -T root S-Left copy-mode \; send-keys -X cursor-left
-bind-key -T root S-Right copy-mode \; send-keys -X cursor-right
-bind-key -T root M-Up select-pane -U
-bind-key -T root M-Down select-pane -D
-bind-key -T root M-Left select-pane -L
-bind-key -T root M-Right select-pane -R
-
-
-# <>
-# monitor bell [on | off]
-set-window-option -g monitor-bell on
-# スクロール履歴
-set-option -g history-limit 30000
-#
-set-option -g status-interval 15
-
-
-# set -g @tmux_power_theme 'snow'
-set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
-# it can accept `session`, `smiley`, `window`, or any character.
-set -g @dracula-show-left-icon session
-set -g @dracula-border-contrast true
-set -g @dracula-gpu-usage-label "GPU"
-set -g @dracula-cpu-usage-label "CPU"
-set -g @dracula-show-fahrenheit false
-# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
-set -g @dracula-plugins "battery time"
-set -g @dracula-military-time true
-set -g @dracula-show-timezone false
-
-# <Appearance>
-## 時計の時間フォーマット [12 | 24]
-set-window-option -g clock-mode-style 24
-## ペインのボーターステータス [off | top | bottom]
-set-window-option -g pane-border-status top
-set-window-option -g pane-border-format " #P"
-## アクティブペインのボータースタイル
-set-window-option -g pane-active-border-style fg=cyan
-## モードスタイル
-set-window-option -g mode-style fg=white,bg=black
-## ステータス [off | on | 2 | 3 | 4 | 5]
-set-option -g status on
-set-option -g status-style fg=colour255,bg=colour237
-set-option -g status-left "#[fg=colour255,bg=colour241][#S]#[default] "
-set-option -g status-right-length 60
-set-option -g status-right "#[fg=colour255,bg=colour241]  \"#{=21:pane_title}\" | %Y-%m-%d | %H:%M | #h #[default]"
-set-window-option -g window-status-format " #I: #W#{?window_flags,#{window_flags}, } "
-set-window-option -g window-status-current-format "#[fg=colour255,bg=colour39,bold] #I: #W#{?window_flags,#{window_flags}, } #[default]"
-
-# <Key Bindings>
-## プレフィックス (default: C-b)
-unbind-key C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-## セッション一覧を表示 (default: s)
-unbind-key s
-if-shell "tmux -V | grep -q '2.[7-9]'" \
-    "bind-key l choose-tree -Z" \
-    "bind-key l choose-tree"
-## 新規ウインドウを作成 (default: c)
-unbind-key c
-bind-key n new-window
-## ペインを閉じる
-bind-key -T prefix w confirm-before -p "kill-pane #P? (y/n)" kill-pane
-## 設定ファイルを読み込む
-bind-key -T prefix r source-file ~/.config/tmux/tmux.conf
-## 指定した方向のペインに移動
-bind-key -T root M-Up select-pane -U
-bind-key -T root M-Down select-pane -D
-bind-key -T root M-Left select-pane -L
-bind-key -T root M-Right select-pane -R
-## ウインドウを垂直方向に分割する
-unbind-key %
-bind-key - split-window -v
-## ウインドウを水平方向に分割する
-unbind-key '"'
-bind-key | split-window -h
-## 選択を開始
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-## 選択範囲を解除
-bind-key -T copy-mode-vi e send-keys -X clear-selection
-## コピー
-bind-key -T copy-mode-vi y send-keys -X copy-pipe ~/.config/tmux/bin/tmux-copy
-## コピーモードを終了
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel ~/.config/tmux/bin/tmux-copy
-## 指定行へ移動
-unbind-key -T copy-mode-vi :
-bind-key -T prefix g copy-mode \; command-prompt -p "(goto line)" "send -X goto-line \"%%%\""
-## 検索
-bind-key -T prefix f copy-mode \; command-prompt -p "(search down)" "send -X search-forward \"%%%\""
-
-
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# システムのクリップボードにコピー
-set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'wfxr/tmux-power'
-set -g @plugin 'dracula/tmux'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+source-file ~/.config/tmux/core.conf
+source-file ~/.config/tmux/appearance.conf
+source-file ~/.config/tmux/keyboard.conf
+if-shell 'test -d ~/.config/tmux/plugins/tpm' {
+    source-file ~/.config/tmux/plugins.conf
+}
