--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 
 source-file ~/.config/tmux/core.conf
 source-file ~/.config/tmux/appearance.conf
-source-file ~/.config/tmux/keyboard.conf
+source-file ~/.config/tmux/keybindings.conf
 if-shell 'test -d ~/.config/tmux/plugins/tpm' {
     source-file ~/.config/tmux/plugins.conf
 }
