Add mode status and disable key bindings

--- a/config/tmux/core.conf
+++ b/config/tmux/core.conf
@@ -41,11 +41,14 @@ set-option -g mode-keys vi
 # Allow programs in the pane to change the window name using a terminal escape sequence (\ek...\e\\).
 set-option -g allow-rename on
 
+# If off, key bindings are diabled in a pane excluding off table key bindings.
+set-option -g @keybindings-activity on
+
 # [Mouse options]
-bind-key -T root MouseDrag1Pane copy-mode
-bind-key -T root DoubleClick1Pane select-pane -t '{mouse}' ';' send-keys -M ';' copy-mode ';' send-keys -X select-word
-bind-key -T root TripleClick1Pane select-pane -t '{mouse}' ';' send-keys -M ';' copy-mode ';' send-keys -X select-line
-bind-key -T root WheelUpPane select-pane -t '{mouse}' ';' copy-mode -e ';' send-keys -X -N 5 scrool-up
+bind-key -T root MouseDrag1Pane copy-mode -H
+bind-key -T root DoubleClick1Pane select-pane -t '{mouse}' ';' send-keys -M ';' copy-mode -H ';' send-keys -X select-word
+bind-key -T root TripleClick1Pane select-pane -t '{mouse}' ';' send-keys -M ';' copy-mode -H ';' send-keys -X select-line
+bind-key -T root WheelUpPane select-pane -t '{mouse}' ';' copy-mode -e -H ';' send-keys -X -N 5 scrool-up
 
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane -t '{mouse}' ';' send-keys -M ';' send-keys -X clear-selection
