--- a/config/tmux/keybindings.conf
+++ b/config/tmux/keybindings.conf
@@ -1,8 +1,16 @@
-# <Keybindings>
+# <Key bindings>
 
 # prefix
 set-option -g prefix C-a
 
+# Disable key bindings
+bind-key -N 'Disable key bindings' -T root F12 set-option prefix None ';' set-option key-table off ';' if-shell -F '#{pane_in_mode}' 'send-keys -X cancel' ';' set-option @keybindings-activity off
+
+# Enable key bindings
+bind-key -N 'Enable key bindings' -T off F12 set-option -u prefix ';' set-option -u key-table ';' set-option @keybindings-activity on
+
+# Copy mode
+bind-key -N 'Copy mode' -T prefix [ copy-mode -H
 # List all panes
 bind-key -N 'List all panes' -T prefix l choose-tree -Z
 # Create a new window
@@ -17,15 +25,15 @@ bind-key -N 'Split window vertically' -T prefix - split-window -v
 bind-key -N 'Split window horizontally' -T prefix | split-window -h
 # Select the next window
 bind-key -N 'Select the next window' -T prefix > next-window
-# Select the previous window
+# Select the previous windowP
 bind-key -N 'Select the previous window' -T prefix < previous-window
 # Search for word
-bind-key -N 'Search for word' -T prefix f copy-mode ';' command-prompt -T -p ' search down >' 'send -X search-forward "%%%" ; display-message "searching \"%1\""'
+bind-key -N 'Search for word' -T prefix f copy-mode -H ';' command-prompt -T -I '#{pane_search_string}' -p '(search down)' 'send -X search-forward "%%%" ; display-message "searching \"#{pane_search_string}\""'
 
 # Search again
-bind-key -N -T copy-mode-vi f send-keys -X search-again
+bind-key -N '' -T copy-mode-vi f send-keys -X search-again
 # Search reverse
-bind-key -N -T copy-mode-vi F send-keys -X search-reverse
+bind-key -N '' -T copy-mode-vi F send-keys -X search-reverse
 # Select
 bind-key -N '' -T copy-mode-vi Space if-shell -F '#{selection_active}' 'send-keys -X stop-selection' 'send-keys -X begin-selection'
 # Copy
