--- a/config/tmux/plugins.conf
+++ b/config/tmux/plugins.conf
@@ -31,6 +31,8 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 # plugins customization
 # dracula/tmux
-set -ga status-right '#[fg=#6272a4]#[fg=#f8f8f2,bg=#6272a4] %m/%d %R '
-set -ga status-right '#[fg=#bd93f9]#[fg=#282a36,bg=#bd93f9] #(~/.config/tmux/bin/pane-hostname #{pane_current_command} #{pane_pid}) '
+set -g status-right '#[fg=#50fa7b]#[fg=#282a36,bg=#50fa7b] #{?#{==:#{@keybindings-activity},on},#{?pane_in_mode,#{?search_present,S,C},N},O} '
+set -ga status-right '#[fg=#ff79c6,nobold,nounderscore,noitalics]#[fg=#282a36,bg=#ff79c6] #(/Users/tomoshige/.config/tmux/plugins/tmux/scripts/battery.sh) '
+set -ga status-right '#[fg=#8be9fd]#[fg=#282a36,bg=#8be9fd] %m/%d %R '
+set -ga status-right '#[fg=#6272a4]#[fg=#f8f8f2,bg=#6272a4] #(~/.config/tmux/bin/pane-hostname #{pane_current_command} #{pane_pid}) '
 set -ga status-right '#[default]'
