Add remote options

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -6,3 +6,6 @@ source-file ~/.config/tmux/keybindings.conf
 if-shell 'test -d ~/.config/tmux/plugins/tpm' {
     source-file ~/.config/tmux/plugins.conf
 }
+if-shell 'test -n "$SSH_CLIENT"' {
+    source-file ~/.config/tmux/remote.conf
+}
