--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Check profile
+        run: shellcheck -e SC2148 -e SC1091 sh/profile
       - name: Check bashrc
         run: shellcheck -e SC1090 -e SC1091 -e SC2148 bash/bashrc
       - name: Check bash_profile
