Change lint test

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Check profile
-        run: shellcheck -e SC2148 -e SC1091 sh/profile
+        run: shellcheck -e SC2148 -e SC1090 -e SC1091 sh/profile
       - name: Check bashrc
         run: shellcheck -e SC1090 -e SC1091 -e SC2148 bash/bashrc
       - name: Check bash_profile
