--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches: [ master ]
     paths:
-      - install.sh
       - .github/workflows/linux.yml
+      - install.sh
+      - sh/*
+      - bash/*
   workflow_dispatch:
 
 jobs:
@@ -21,10 +23,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run install.sh minimum
         run: ./install.sh minimum
-      - name: Load .bash_profile
-        run: |
-          bash ~/.bash_profile 2> error.log; cat error.log
-          test ! -s error.log
       - name: Load .bashrc
         run: |
           bash ~/.bashrc 2> error.log; cat error.log
