Fix keybind for search

--- a/config/tmux/keybindings.conf
+++ b/config/tmux/keybindings.conf
@@ -28,7 +28,7 @@ bind-key -N 'Select the next window' -T prefix > next-window
 # Select the previous windowP
 bind-key -N 'Select the previous window' -T prefix < previous-window
 # Search for word
-bind-key -N 'Search for word' -T prefix f copy-mode -H ';' command-prompt -T -I '#{pane_search_string}' -p '(search down)' 'send -X search-forward "%%%" ; display-message "searching \"#{pane_search_string}\""'
+bind-key -N 'Search for word' -T prefix f copy-mode -H ';' command-prompt -I '#{pane_search_string}' -p '(search down)' 'send -X search-forward "%%%" ; display-message "searching \"#{pane_search_string}\""'
 
 # Search again
 bind-key -N '' -T copy-mode-vi f send-keys -X search-again
