Add if condition for battery

--- a/config/tmux/plugins.conf
+++ b/config/tmux/plugins.conf
@@ -19,12 +19,14 @@ set -g @yank_action 'copy-pipe-no-clear'
 set -g @yank_with_mouse 'off'
 # dracula/tmux
 set -g @dracula-border-contrast true
-# set -g @dracula-military-time true
-set -g @dracula-plugins 'battery'
+if-shell 'test -d /sys/class/power_supply/BAT*' {
+    set -g @dracula-plugins 'battery'
+}
+
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
 set -g @dracula-show-powerline true
-# set -g @dracula-show-timezone false
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
