--- a/config/git/config
+++ b/config/git/config
@@ -4,18 +4,20 @@
   path = ~/.gitconfig_local
 [core]
   autocrlf = input
-  excludesfile = ~/.gitignore_global
   # Make `git rebase` safer on macOS
   # More info: <http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/>
   trustctime = false
 [init]
-    defaultBranch = main
+  defaultBranch = main
 [commit]
   template = $XDG_CONFIG_HOME/.config/git/message
 [merge]
+  conflictstyle = diff3
   ff = false
 [pull]
   ff = only
+[diff]
+  colorMoved = dimmed-zebra
 [alias]
   graph = log --graph --date-order --all --pretty=format:'%h %Cred%d %Cgreen%ad %Cblue%cn %Creset%s' --date=short
   undo = reset --soft HEAD~1
@@ -27,9 +29,11 @@
   reflog = delta
   show = delta
 [interactive]
-    diffFilter = delta --color-only --features=interactive
+  diffFilter = delta --color-only --features=interactive
 [delta]
-    features = decorations
+  line-numbers = true
+  side-by-side = true
+  navigate = true
 [color]
   ui = true
 [color "branch"]
