--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: HackGenNerd
+    family: "HackGenNerd Console"
     # family: monospace
 
     # The `style` can be specified to pick a specific face.
